// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`button directive widget resolution > should calculate correct dimensions and position 1`] = `
{
  "height": 16,
  "id": "btn1",
  "isInteger": true,
  "offValue": 0,
  "onValue": 1,
  "width": 32,
  "wordAlignedAddress": 5,
  "x": 68,
  "y": 0,
}
`;

exports[`button directive widget resolution > should handle multiple buttons 1`] = `
[
  {
    "height": 16,
    "id": "btn1",
    "isInteger": true,
    "offValue": 0,
    "onValue": 1,
    "width": 32,
    "wordAlignedAddress": 5,
    "x": 68,
    "y": 0,
  },
  {
    "height": 16,
    "id": "btn2",
    "isInteger": true,
    "offValue": 5,
    "onValue": 10,
    "width": 32,
    "wordAlignedAddress": 6,
    "x": 68,
    "y": 16,
  },
]
`;

exports[`button directive widget resolution > should position buttons at correct y coordinate based on line number 1`] = `
{
  "height": 16,
  "id": "btn1",
  "isInteger": true,
  "offValue": 0,
  "onValue": 1,
  "width": 32,
  "wordAlignedAddress": 5,
  "x": 68,
  "y": 32,
}
`;
